# sdk

./: .bazelrc  .gitattributes  BUILD  LICENSE  MODULE.bazel  README.md  go.mod  go.sum  requirements.in  requirements.txt
.github/actions/download-intrinsic-os-sbom/: action.yml
.github/ci/: .bazelrc  generate_changelog.sh  release_notes_gen.py
.github/workflows/: release.yml
bazel/: BUILD  cc_oci_image.bzl  checkimportpathmatchesgopackage.go  container.bzl  exec_properties.bzl  go_macros.bzl  non_module_deps.bzl  python_oci_image.bzl  python_paths_aspect.bzl  sh_macros.bzl  skills.bzl
bazel/content_mirror/: permissive.cfg
doc_gen/: release_notes_gen.py
incode/middleware/: imw.h
incode/middleware/zenoh/: BUILD  imw-versionscript.lds  imw_zenoh.cc  imw_zenoh.h  imw_zenoh_data_callback_context.cc  imw_zenoh_data_callback_context.h  imw_zenoh_globals.cc  imw_zenoh_publisher.cc  imw_zenoh_publisher.h  imw_zenoh_query_context.h  imw_zenoh_queryable.cc  imw_zenoh_queryable.h  imw_zenoh_queryable_context.cc  imw_zenoh_subscription.cc  imw_zenoh_subscription.h
intrinsic/: BUILD
intrinsic/assets/: BUILD  assetvalidate.go  baseclientutils.go  bundle.go  bundle_io.go  bundle_io_data.go  bundle_io_hardware_devices.go  bundle_io_processes.go  bundle_io_services.go  bundle_io_skills.go  clientutils.go  cmdutils.go  id_utils.cc  id_utils.h  id_utils.py  idutils.go  imagetransfer.go  imageutils.go  interface_utils.cc  interface_utils.h  interface_utils.py  interfaceutils.go  ioutils.go  listutils.go  metadata_field_limits.go  metadatautils.go  metadatautils_test.go  referenceddata.go  referenceddata_test.go  tagutils.go  tagutils_test.go  typeutils.go  version.go  viewutils.go
intrinsic/assets/build_defs/: BUILD  asset.bzl  asset.proto  assetcatalogrefinfogen.go  assetinstancegen.go  assetlocalinfogen.go
intrinsic/assets/catalog/: BUILD  assetdescriptions.go  assetutils.go  releaseasset.go
intrinsic/assets/configuration/: BUILD  asset_configuration_client.py  asset_configuration_client_test.py
intrinsic/assets/conversion/: BUILD  id_parser.go
intrinsic/assets/data/: BUILD  databundle.go  datafix.go  datamanifest.go  datamanifest_test.go  datavalidate.go  fake_data_assets.cc  fake_data_assets.go  fake_data_assets.h  fake_data_assets.py  utils.go
intrinsic/assets/dependencies/: BUILD  platform.go  platform.h  platform.py  utils.cc  utils.go  utils.h  utils.py  utils_test.cc  utils_test.go  utils_test.py
intrinsic/assets/errors/: BUILD  report.go
intrinsic/assets/hardware_devices/: BUILD  hardwaredevicebundle.go  hardwaredevicefix.go  hardwaredevicemanifest.go  hardwaredevicevalidate.go
intrinsic/assets/inctl/: BUILD  assetcmd.go  assetdescriptions.go  assetviews.go  assetviews_test.go  getreleased.go  install.go  list.go  listreleased.go  listreleasedversions.go  release.go  uninstall.go  updatereleasemetadata.go
intrinsic/assets/install/: BUILD  installed_assets_client.py  installed_assets_client_test.py
intrinsic/assets/processes/: BUILD  processbundle.go  processfix.go  processmanifest.go  processutil.go  processvalidate.go
intrinsic/assets/proto/: BUILD  asset_deployment.proto  asset_tag.proto  asset_tags.textproto  asset_type.proto  documentation.proto  field_metadata.proto  id.proto  installed_assets.proto  metadata.proto  release_tag.proto  status_spec.proto  vendor.proto  view.proto
intrinsic/assets/scene_objects/: BUILD  sceneobjectfix.go  sceneobjectmanifest.go  sceneobjectmanifest_test.go  sceneobjectvalidate.go  sceneobjectvalidate_test.go
intrinsic/assets/services/: BUILD  bundleimages.go  config.go  config_test.go  servicebundle.go  servicefix.go  servicemanifest.go  servicemanifest_test.go  servicevalidate.go
intrinsic/assets/testing/: BUILD  assetbuilder.go
intrinsic/assets/validation/: BUILD  errors.go
intrinsic/config/: BUILD  environments.cc  environments.go  environments.h  environments.py  environments_test.cc  environments_test.py  operation_mode.go  operation_mode_test.go
intrinsic/config/proto/: BUILD  operation_mode.proto
intrinsic/eigenmath/: BUILD  clamp.h  rotation_utils.h  so3.h  types.h
intrinsic/httpjson/: BUILD  OWNERS  go_grpc_http_library.bzl  intrinsic_http_image.bzl
intrinsic/kinematics/: BUILD
intrinsic/logging/: BUILD  data_logger_client.cc  data_logger_client.h  structured_logging_client.cc  structured_logging_client.h
intrinsic/math/: BUILD  gaussian_noise.cc  proto_conversion.cc  proto_conversion.h
intrinsic/middleware/: BUILD
intrinsic/motion_planning/: BUILD  motion_planner_client.cc  motion_planner_client.h  motion_planner_client.py
intrinsic/perception/: BUILD  asset_utils.cc  asset_utils.h  calibration_service_utils.cc  calibration_service_utils.h  pose_estimator_id_utils.cc  pose_estimator_id_utils.h
intrinsic/platform/: BUILD  cc_fbs_library.bzl  fbs_library.bzl  flatbuffers.bzl
intrinsic/production/: BUILD  init.go
intrinsic/scene/: BUILD  constants.h  user_data_keys.h
intrinsic/skills/: BUILD  skillbundle.go  skillfix.go  skillmanifest.go  skillvalidate.go
intrinsic/solutions/: BUILD  auth.py  auth_test.py  behavior_tree.py  behavior_tree_test.py  blackboard.py  blackboard_test.py  blackboard_value.py  deployments.py  deployments_test.py  dialerutil.py  dialerutil_test.py  error_processing.py  error_processing_test.py  errors.py  execution.py  execution_test.py  ipython.py  ipython_test.py  kvstore.py  kvstore_test.py  logging_pubsub_listener_test.py  motion_planning.py  motion_planning_external_test.py  pbt_registration.py  perception.py  perception_external_test.py  pose_estimation.py  pose_estimation_test.py  proto_building.py  proto_building_external_test.py  proto_building_test.py  provided.py  providers.py  simulation.py  simulation_external_test.py  structured_logging.py  structured_logging_test.py  userconfig_test.py  utils.py  (+3 more)
intrinsic/testing/: BUILD  build_defs.bzl
intrinsic/util/: BUILD  atomic_sequence_num.h  eigen.h  eigen_test.cc  flag.go  proto_time.cc  proto_time.h
intrinsic/world/: BUILD  entity_id.cc  entity_id.h  entity_id_test.cc  labels.h
(+1877 files in other folders)
