# Copyright 2023 Intrinsic Innovation LLC

module(
    name = "ai_intrinsic_sdks",
    version = "",
)

non_module_deps = use_extension("//bazel:non_module_deps.bzl", "non_module_deps_ext")

######
# Go #
######

bazel_dep(name = "rules_go", version = "0.60.0", repo_name = "io_bazel_rules_go")

go_sdk = use_extension("@io_bazel_rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.25.0")

bazel_dep(name = "gazelle", version = "0.47.0", repo_name = "bazel_gazelle")

go_deps = use_extension("@bazel_gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(
    go_deps,
    # keep-sorted start
    "com_github_andydunstall_piko",
    "com_github_authzed_authzed_go",
    "com_github_bazelbuild_buildtools",
    "com_github_bazelbuild_remote_apis_sdks",
    "com_github_bits_and_blooms_bitset",
    "com_github_cenkalti_backoff_v4",
    "com_github_golang_glog",
    "com_github_golang_jwt_jwt_v4",
    "com_github_google_go_cmp",
    "com_github_google_go_containerregistry",
    "com_github_google_safearchive",
    "com_github_google_subcommands",
    "com_github_gorilla_websocket",
    "com_github_masterminds_semver",
    "com_github_pborman_uuid",
    "com_github_pkg_errors",
    "com_github_protocolbuffers_txtpbfmt",
    "com_github_robfig_cron_v3",
    "com_github_rs_xid",
    "com_github_spf13_cobra",
    "com_github_spf13_pflag",
    "com_github_spf13_viper",
    "com_github_stoewer_go_strcase",
    "com_github_stretchr_testify",
    "com_google_cloud_go_longrunning",
    "in_gopkg_xmlpath_v2",
    "in_gopkg_yaml_v3",
    "io_opencensus_go",
    "io_opencensus_go_contrib_exporter_ocagent",
    "io_opencensus_go_contrib_exporter_prometheus",
    "io_opencensus_go_contrib_exporter_stackdriver",
    "org_golang_google_genproto",
    "org_golang_google_genproto_googleapis_api",
    "org_golang_google_genproto_googleapis_rpc",
    "org_golang_google_grpc",
    "org_golang_google_protobuf",
    "org_golang_x_exp",
    "org_golang_x_net",
    "org_golang_x_sync",
    "org_golang_x_text",
    "org_uber_go_atomic",
    # keep-sorted end
)

##########
# Python #
##########

bazel_dep(name = "rules_python", version = "1.6.3")

# The root module defines the default toolchain version.
# If it doesn't find dependencies which that version it errors out.
# It seems to be best practice to just declare all compatible versions in dependencies.
PYTHON_VERSIONS = [
    "3.11",
]

python = use_extension("@rules_python//python/extensions:python.bzl", "python")

[
    python.toolchain(
        python_version = python_version,
    )
    for python_version in PYTHON_VERSIONS
]

# Choose last version as default.
python.defaults(
    python_version = PYTHON_VERSIONS[-1],
)
use_repo(python, system_python = "python_3_11")

bazel_dep(name = "pybind11_bazel", version = "3.0.0")
bazel_dep(name = "pybind11_abseil", version = "202402.0")
bazel_dep(name = "pybind11_protobuf", version = "0.0.0-20250210-f02a2b7")

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")

[
    pip.parse(
        # Enable the Bazel downloader for whl fetches, see
        # https://rules-python.readthedocs.io/en/latest/pypi-dependencies.html#bazel-downloader-and-multi-platform-wheel-hub-repository.
        experimental_index_url = "https://pypi.org/simple",
        experimental_index_url_overrides = {
            "blender-headless": "https://us-central1-python.pkg.dev/intrinsic-mirror/intrinsic-public-python/simple",
            "cadexchanger": "https://download.cadexchanger.com/python",
            "pyrender": "https://us-central1-python.pkg.dev/intrinsic-mirror/intrinsic-public-python/simple",
            "pytorch3d": "https://us-central1-python.pkg.dev/intrinsic-mirror/intrinsic-public-python/simple",
            "tensorflow": "https://us-central1-python.pkg.dev/intrinsic-mirror/intrinsic-public-python/simple",
        },
        hub_name = "ai_intrinsic_sdks_pip_deps",
        python_version = python_version,
        requirements_lock = "//:requirements.txt",
        simpleapi_skip = [
            "collision-avoidance-metric",
            "proto-breaking-change-detector",
        ],
    )
    for python_version in PYTHON_VERSIONS
]

use_repo(pip, "ai_intrinsic_sdks_pip_deps")

#################
# C++ toolchain #
#################

bazel_dep(name = "toolchains_llvm", version = "1.6.0")

use_repo(non_module_deps, "intrinsic_llvm_sysroot")

# Inspect supported toolchains at https://github.com/bazel-contrib/toolchains_llvm/blob/master/toolchain/internal/llvm_distributions.bzl
llvm = use_extension(
    "@toolchains_llvm//toolchain/extensions:llvm.bzl",
    "llvm",
    dev_dependency = True,
)

llvm.toolchain(
    llvm_version = "21.1.0",
)
llvm.sysroot(
    label = "@intrinsic_llvm_sysroot//:all_files",
    targets = ["linux-x86_64"],
)
use_repo(llvm, "llvm_toolchain")

register_toolchains(
    "@llvm_toolchain//:all",
    dev_dependency = True,
)

bazel_dep(name = "rules_cc", version = "0.2.16")
bazel_dep(name = "rules_foreign_cc", version = "0.15.1")

# NVIDIA prebuilt shared libraries and binaries used for TensorFlow.
# These are separate from rules_cuda as the former is primarily for building C++
# targets, whereas these prebuilt targets are dynamically loaded into TensorFlow
# and contain extra libraries not included in rules_cuda, e.g. cudnn and nccl.
nvidia_libs_ext = use_extension(
    "//intrinsic/production/external/nvidia_libs:extensions.bzl",
    "nvidia_libs_ext",
)
nvidia_libs_ext.cuda_libs(
    name = "cuda_redist_for_tf",
    components = [
        "cuda_cudart",
        "cuda_nvcc",
        "libcublas",
        "libcufft",
        "libcusolver",
        "libcusparse",
        "libnvjitlink",
    ],
    cuda_version = "12.5.1",
    manifest_sha256 = "7ab9c76014ae4907fa1b51738af599607a5fd8ca3a5c4bb4c3b31338cc642a93",
)
nvidia_libs_ext.cudnn_libs(
    name = "cudnn_redist_for_tf",
    components = ["cudnn"],
    cudnn_cuda_version = "12",
    cudnn_version = "9.3.0",
    manifest_sha256 = "d17d9a7878365736758550294f03e633a0b023bec879bf173349bfb34781972e",
)
nvidia_libs_ext.nccl_libs(
    name = "nccl_redist_for_tf",
    cuda_version = "12.4",
    nccl_version = "2.27.7",
    sha256 = "944e1ba3a5ca9bbd449bbaed9796626122670e58dea3031837a3910a90ffd5ee",
)
use_repo(
    nvidia_libs_ext,
    "cuda_redist_for_tf",
    "cudnn_redist_for_tf",
    "nccl_redist_for_tf",
)

########
# Java #
########

bazel_dep(name = "rules_java", version = "9.5.0")

##############
# Containers #
##############

bazel_dep(name = "rules_oci", version = "2.2.7")
bazel_dep(name = "container_structure_test", version = "1.22.1")

oci = use_extension("@rules_oci//oci:extensions.bzl", "oci")
oci.pull(
    name = "distroless_base",
    digest = "sha256:8c8b7cf2a01e2d1c683128b2488d77139fa90ec8cb807f0ae260d57f7022dedd",
    image = "gcr.io/distroless/base",
    platforms = ["linux/amd64"],
)

# Version pinned to last known version for EC-Engineer, due to b/478927987.
oci.pull(
    name = "distroless_base_bookworm",
    digest = "sha256:9e9b50d2048db3741f86a48d939b4e4cc775f5889b3496439343301ff54cdba8",
    image = "gcr.io/distroless/base",
    platforms = ["linux/amd64"],
    tag = "bookworm",
)
oci.pull(
    name = "distroless_cc",
    digest = "sha256:d7ac2f9af248f31fe6270002755722afdf6875e0e49cd52b9150208e6a23875c",
    image = "gcr.io/distroless/cc",
    platforms = ["linux/amd64"],
)
oci.pull(
    name = "distroless_python3",
    digest = "sha256:1f2a297711facbdc0a26c6d1343efaca6009ec5cedbfd7bdda7299b37d232a89",
    image = "gcr.io/distroless/python3",
    platforms = ["linux/amd64"],
)

# BUG Bazel reports wrong repo usage: https://github.com/bazel-contrib/rules_oci/issues/727
use_repo(
    oci,
    "distroless_base",
    "distroless_base_bookworm",
    "distroless_base_bookworm_linux_amd64",
    "distroless_base_linux_amd64",
    "distroless_cc",
    "distroless_cc_linux_amd64",
    "distroless_python3",
    "distroless_python3_linux_amd64",
)

############################
# Missing Google OSS files #
############################

use_repo(
    non_module_deps,
    # keep-sorted start
    "com_google_xls_strong_int_h",
    # keep-sorted end
)

#########
# Other #
#########

# keep-sorted start
bazel_dep(name = "abseil-cpp", version = "20250814.1")
bazel_dep(name = "abseil-py", version = "2.1.0", repo_name = "com_google_absl_py")
bazel_dep(name = "aspect_bazel_lib", version = "2.22.5")
bazel_dep(name = "bazel_skylib", version = "1.9.0")
bazel_dep(name = "boringssl", version = "0.20260211.0")
bazel_dep(name = "cel-cpp", version = "0.14.0", repo_name = "com_google_cel_cpp")
bazel_dep(name = "cel-spec", version = "0.25.1", repo_name = "com_google_cel_spec")
bazel_dep(name = "dumb-init", version = "1.2.5")
bazel_dep(name = "eigen", version = "5.0.1", repo_name = "com_gitlab_libeigen_eigen")
bazel_dep(name = "etherlab-ethercat", version = "1.6.7")
bazel_dep(name = "flatbuffers", version = "25.12.19", repo_name = "com_github_google_flatbuffers")
bazel_dep(name = "fuzztest", version = "20250805.0", repo_name = "com_google_fuzztest")
bazel_dep(name = "google_benchmark", version = "1.9.5", repo_name = "com_google_benchmark")
bazel_dep(name = "googleapis", version = "0.0.0-20260130-c0fcb356", repo_name = "com_google_googleapis")
bazel_dep(name = "googleapis-cc", version = "1.0.0")
bazel_dep(name = "googleapis-grpc-cc", version = "1.0.0")
bazel_dep(name = "googleapis-python", version = "1.0.0")
bazel_dep(name = "googletest", version = "1.17.0.bcr.2", repo_name = "com_google_googletest")
bazel_dep(name = "grpc", version = "1.74.0", repo_name = "com_github_grpc_grpc")
bazel_dep(name = "grpc_ecosystem_grpc_gateway", version = "2.27.3", repo_name = "com_github_grpc_ecosystem_grpc_gateway_v2")
bazel_dep(name = "jsonnet", version = "0.21.0")
bazel_dep(name = "nlohmann_json", version = "3.12.0.bcr.1", repo_name = "com_github_nlohmann_json")
bazel_dep(name = "opencensus-cpp", version = "0.0.0-20230502-50eb5de.bcr.2", repo_name = "io_opencensus_cpp")
bazel_dep(name = "or-tools", version = "9.12", repo_name = "or_tools")
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "protobuf", version = "32.1", repo_name = "com_google_protobuf")
bazel_dep(name = "protobuf-matchers", version = "0.1.1", repo_name = "com_github_inazarenko_protobuf_matchers")
bazel_dep(name = "re2", version = "2024-07-02.bcr.1", repo_name = "com_googlesource_code_re2")
bazel_dep(name = "rules_license", version = "1.0.0")
bazel_dep(name = "rules_pkg", version = "1.2.0")
# keep-sorted end

use_repo(
    non_module_deps,
    # keep-sorted start
    # keep-sorted end
)

bazel_lib_toolchains = use_extension("@aspect_bazel_lib//lib:extensions.bzl", "toolchains")
bazel_lib_toolchains.jq()
use_repo(bazel_lib_toolchains, "jq")
